did lots of work, didn't get far though

--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -1,48 +1,32 @@
 doctype html
 html(lang="en")
   head
-    title= "Alexander Sopov - " + pages[0].title
+    title= "Wix Module Editor"
     meta(charset="utf-8")
-    meta(name="description", content="Personal Portfolio")
+    meta(name="description", content="Editor a wix-html-module")
     meta(name="author", content="Alexander Sopov")
     meta(name="viewport", content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no")
     link(href="https://fonts.googleapis.com/css?family=Gentium+Basic|Josefin+Sans:300,400", rel="stylesheet")
-    style 
+    style
       include ../../dist/css/style.css
     script(src="https://code.jquery.com/jquery-2.2.4.min.js")
     script
       include ../../dist/js/bundle.js
   body
-    //
-      HEADER STICKY, MENU AND LOGO
-    header.stickyHD
-      div#logo(onclick="script.nav.goTo(this)")
-        h3=logo+"."
-      div#navbar(onclick="script.nav.toggle()")
-        ul
-          - for (var i=0; i<pages.length;i++)
-            - var title = pages[i].title, url = "#"+title;
-            li(onclick="script.nav.goTo(this)", data-value=title, id=title+"-nav")
-              h3!= title+"."
-   
-    //
-      HEADER-IMG, SUPPOSED TO CHANGE BUT FUCK IT, KEEP IT STATIC ATM
-      ***
-    div#header-img
-      img(src="img/headerImg.jpg")
-    
-    //
-      BODY AND CONTAINER
-    div#body
-      .container
-
-        include includes/introduction.pug
-        - var page = pages[0];
-          include includes/merits.pug
-        - page = pages[1];
-          include includes/pages.pug
-        - page = pages[2];
-          include includes/pages.pug
-      include includes/footer.pug
-
-        
+    h1 Wix Tabellredigerare
+    div#editor
+      div#description-editor
+        h2 Beskrivning
+        textarea
+      div#specification-editor
+        h2 Specifikation
+        textarea
+    div#preview
+      div.tab-container
+        div#description.tab.active(onclick="_tab_module.openTab(this)")
+          p Beskrivning
+        div#specification.tab(onclick="_tab_module.openTab(this)")
+          p Specifikation
+      div#description-content.content.active-content
+      table#specification-content.content
+    div#code-snippet
