--- a/dev/static/css/style.styl
+++ b/dev/static/css/style.styl
@@ -1,20 +1,8 @@
-width = 70%
-margin = 15%
-headerHeight = 70px
-navHeight = 40px
-animationTime = 0.5s
-*
-	/*border 1px solid black*/
-body
-	margin 0px
-	padding 0px
 
-/*
- *	FONTS
- */
- 
+
 h1
-	font-size 2.9em
+	margin-left 20px
+	font-size 3.2em
 	font-family 'Palatino Linotype'
 h2
 	font-family 'Palatino Linotype'
@@ -27,195 +15,19 @@ p
 	font-weight 400
 	font-size 1.2em
 
-#footer .container div h3
-	font-size 1.2em
-	
-
-/*
- *	HEADER
- */
- 
-header
-	overflow hidden
-	transition: all animationTime;
-	display flex
-	flex-wrap wrap
-	z-index 3
-	background rgba(255,255,255,1);
+textarea
+	resize none
 	width 100%
-	position fixed
-	top:0px
-	height headerHeight
-	#logo
-		display block
-		cursor pointer
-		width calc(100% / 2.2)
-		height 100%
-		text-align right
-		h3
-			padding 0px
-			padding-right 20px
-			margin-top 25px
-	#navbar
-		position relative
-		margin 0px
-		padding:0px
-		height navHeight
-		transition: all animationTime ease-out;
-		hr 
-			position absolute
-			top -100px
-			left 00px
-			width 100%
-		ul
-			list-style-type none
-			margin 0px
-			padding 0px
-			li 
-				height: headerHeight
-				padding 0px
-				border 1px solid white
-				h3
-					text-align left
-					font-family 'Josefin Sans', sans-serif
-					font-weight 300
-					font-size 1.4em
-					margin 0px
-					margin-top 25px
-					cursor pointer
-			
-#header-img
-	position: fixed
-	top headerHeight
-	z-index 1
-	width 100%
-	img
-		max-width 100%
-		height auto
-	
-/*
- *	BODY
- */
- 
-#body
-	z-index 2
-	padding-top 40px
-	background-color white
-	width 100%
-	position relative
-	top 100px
-.container
-	width width
-	margin-left margin
-	margin-right margin
-	.page
-		text-align center
-		margin-bottom:100px
-		.title
-			h1
-				margin 20px
-		.content
-			margin-top 0px
+	min-height 500px
 
-		// .intro.ingress
-		// 	div 
-		// 		margin-top 0px
-		// 		p
-		// 			margin-top inherit
-		// 	div:nth-child(1),
-		// 	div:nth-child(2)
-		// 		margin-top 20px
- 
-
-/*
- *	FOOTER
- */
- 
-
-#footer
-	padding 20px
-	text-align left
-	color #fff
-	background-color #1a1b20
-	min-height calc(100vh - 140px)
-	margin 50px 0px 0px 0px
-	h3
-		font-weight 300
-		font-family 'Josefin Sans', sans-serif
+#editor
+	text-align center
+	div
+		width calc(50% - 40px)
+		margin 20px
+		float left
 
 
-@media only screen and (min-width 375px)
-	h1
-		font-size 3.2em
-	h2
-		font-size 2em
-	p
-		font-size 1.4em
-	header
-		#logo
-			width (100% / 2.5)
-
-@media only screen and (min-width 769px)
-	headerHeight = 100px
-	h1
-		font-size 4em
-	h2
-		font-size 3em
-	h3
-		font-size 2em
-	p
-		font-size 1.6em
-	header
-		height headerHeight
-		#logo
-			width (100% / 2.5)
-			h3
-				margin-top 30px
-		#navbar ul
-			li
-				height headerHeight
-				h3
-					font-size 2em
-					margin-top 35px
-	width = 750px
-	margin = calc( (100% - 750px) / 2 )
-	#body
-		padding-top 60px
-		.container
-			width width
-			margin-left margin
-			margin-right margin
-				.page .content-wrap
-					display flex
-					flex-wrap wrap
-					.content
-						padding 25px
-						width calc(50% - 50px)
-						text-align left
-					.left
-						text-align right
-	.ingress p
-		font-size 2em
-	#footer
-		min-height calc(100vh - 200px)
-@media only screen and (min-width 1024px)
-	width = 1000px
-	margin = calc( (100% - 1000px) / 2 )
-	.container
-		width width
-		margin-left margin
-		margin-right margin
-		.page .intro.ingress
-			text-align justify
-			display flex
-			flex-wrap wrap
-			.left-p
-				width calc(50% - 25px)
-				padding-right 25px
-			.right-p
-				width calc(50% - 25px)
-				padding-left 25px
-
-@media only screen and (orientation: landscape)
-	#body
-		padding-top 50px
+// @media only screen and (min-width 375px)
+//
+// @media only screen and (min-width 769px)
