--- a/dev/templates/index.pug
+++ b/dev/templates/index.pug
@@ -40,8 +40,8 @@ html(lang="en")
               table#specification-content.content
             script
               include ../../dist/js/module-code-min.js
-        div#code-snippet.col-xs-12.col-sm-6.col-lg-12
+        div#code-snippet.col-xs-12.col-sm-6
           div.row
             h2.col-xs-12 Code to copy:
           div.row
-            div#code.col-xs-12
+            textarea#code(readonly)
